[package]
name = "linear_assignment"
description = "An implementation of the Kuhn–Munkres algorithm to solve linear assignment problems."
repository = "https://github.com/saebyn/linear-assignment-rust/"
documentation = "https://saebyn.github.io/linear-assignment-rust/linear_assignment/"
version = "0.0.2"
authors = ["John Weaver <john@saebyn.info>"]
license = "AGPL-3.0"
readme = "README.md"


[lib]
name = "linear_assignment"

[[bench]]
name = "lib"
harness = false


[dependencies]
num = "0.2.0"
log = "0.4.8"
bit-set = "0.5.1"

[dev-dependencies]
criterion = "0.3.0"

[dev-dependencies.nalgebra]
version = "0.19.0"
features = ["arbitrary"]

[dev-dependencies.rand]
version = "*"

[dev-dependencies.quickcheck]
version = "0.9.0"

[dev-dependencies.quickcheck_macros]
version = "0.8.0"

[dev-dependencies.env_logger]
version = "*"
