[package]
name = "linear_assignment"
description = "An implementation of the Kuhn–Munkres algorithm to solve linear assignment problems."
repository = "https://github.com/saebyn/linear-assignment-rust/"
documentation = "https://saebyn.github.io/linear-assignment-rust/linear_assignment/"
version = "0.0.2"
authors = ["John Weaver <john@saebyn.info>"]
license = "AGPL-3.0"
readme = "README.md"
edition = "2021"


[lib]
name = "linear_assignment"

[[bench]]
name = "lib"
harness = false


[dependencies]
num = "0.4.1"
log = "0.4.8"
bit-set = "0.5.1"

[dependencies.nalgebra]
version = "0.32.1"
features = ["arbitrary"]

[dev-dependencies]
criterion = "0.5.1"

[dev-dependencies.rand]
version = "*"

[dev-dependencies.quickcheck]
version = "1.0.3"

[dev-dependencies.quickcheck_macros]
version = "1.0.0"

[dev-dependencies.env_logger]
version = "*"
